--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.6.5
 bcrypt==3.2.0
 blinker==1.4
 certifi==2021.5.30
@@ -9,19 +10,28 @@ email-validator==1.1.3
 Flask==2.0.1
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.11.0
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
+gunicorn==20.1.0
 idna==3.2
+importlib-metadata==4.6.3
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.4
 MarkupSafe==2.0.1
 musicbrainzngs==0.7.1
 psycopg2-binary==2.9.1
 pycparser==2.20
+python-dateutil==2.8.2
+python-editor==1.0.4
 requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.22
+SQLAlchemy-Utils==0.37.8
+typing-extensions==3.10.0.0
 urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp==3.5.0
