--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.6.5
 bcrypt==3.2.0
 blinker==1.4
+boto3==1.18.26
+botocore==1.21.26
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -19,6 +21,7 @@ idna==3.2
 importlib-metadata==4.6.3
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jmespath==0.10.0
 Mako==1.1.4
 MarkupSafe==2.0.1
 musicbrainzngs==0.7.1
@@ -27,6 +30,7 @@ pycparser==2.20
 python-dateutil==2.8.2
 python-editor==1.0.4
 requests==2.26.0
+s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.22
 SQLAlchemy-Utils==0.37.8
